--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,8 @@ pandas>=1.3.0
 # neo>=0.11.0
 
 # Notion Sync
-notion-client>=2.0.0
+notion-client==1.0.0
+pyyaml>=6.0.0
 python-dotenv>=1.0.0
 
 # Machine Learning (optional)
