--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ on:
     branches: [main]
   schedule:
     # 매일 UTC 00:00 (KST 09:00) 실행
-    - cron: '0 0 * * *'
+    - cron: "0 */6 * * *" # Runs every 6 hours
   workflow_dispatch:
     inputs:
       sync_notion:
