--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -149,9 +149,14 @@ jobs:
           python-version: '3.11'
           cache: 'pip'
       
-      - name: 📦 Install Jupyter Book
+      - name: 📦 Install Jupyter Book and dependencies
         run: |
-          pip install "jupyter-book<1.0.0"
+          pip install --upgrade pip
+          pip install jupyter-book==0.15.1
+          pip install "sphinx<5.1,>=4"
+          pip install "docutils<0.19,>=0.15"
+          pip install "sphinx-thebe~=0.2.0"
+          pip install sphinxcontrib-mermaid==1.2.3
       
       - name: 🔨 Build Jupyter Book
         run: |
